some minor changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="row">
         <div class="col-lg-6" style="line-height: 2;">
-          <h2>What is Golden Ratio?<img src="question.png" height="30" width="30"></h2>
+          <h2>What is Golden Ratio?<img src="images/question.png" height="30" width="30"></h2>
           <p>
             The Golden Ratio,also called the golden mean or golden section(Latin: sectio aurea) is a mathematical ratio that's commonly found in nature.
             It can be used to create visually-pleasing, organic-looking compositions in your design projects or artwork.
@@ -73,7 +73,7 @@
         </div>
 
       </div>
-      <a role="button" class="btn btn-outline-warning btn-lg btn-block h-button" href="gr1.webp"> Check This Out <i class="far fa-hand-point-left"></i></a>
+      <a role="button" class="btn btn-outline-warning btn-lg btn-block h-button" href="images/gr1.webp"> Check This Out <i class="far fa-hand-point-left"></i></a>
     </div>
   </section>
 
@@ -245,56 +245,19 @@
     </div>
   </div>
 
-  <!-- Pricing -->
+
   <section id="Applications">
+<p></p>
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
-
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
 
   </section>
 
 
-  <!-- Call to Action -->
 
-  <section id="cta">
-
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
-  </section>
-
-
-  <!-- Footer -->
 
   <footer id="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+
 
   </footer>
 
