--- a/index.html
+++ b/index.html
@@ -8,35 +8,30 @@
   <!-- GOOGLE FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <!-- BOOTSTRAP CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
   <!-- CSS STYLESHEET -->
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="fla.png">
+  <link rel="icon" href="images/fla.png">
 
-  <!-- aweFONTS -->
+  <!-- FONTS-AWESOME -->
   <script src="https://kit.fontawesome.com/5bbf9f11f7.js" crossorigin="anonymous"></script>
 
-  <!-- BOOTSTRAP JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
   <section id="title">
-    <div class="container-fluid">
+          <!-- Nav Bar -->
 
-      <!-- Nav Bar -->
-
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="">Golden Ratio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item">
@@ -52,8 +47,9 @@
         </div>
       </nav>
 
-      <!-- Title -->
+      <!-- HOME-->
 
+<div class="container-fluid">
       <div class="row">
         <div class="col-lg-6" style="line-height: 2;">
           <h2>What is Golden Ratio?<img src="images/question.png" height="30" width="30"></h2>
@@ -73,10 +69,15 @@
         </div>
 
       </div>
-      <a role="button" class="btn btn-outline-warning btn-lg btn-block h-button" href="images/gr1.webp"> Check This Out <i class="far fa-hand-point-left"></i></a>
+      <a role="button" class="btn btn-outline-dark btn-lg btn-block h-button" href="images/gr1.webp"> Check This Out <i class="far fa-hand-point-left"></i></a>
     </div>
   </section>
+<hr>
 
+
+
+
+<!-- HISTORY -->
   <section id="history">
 
 
@@ -115,9 +116,9 @@
 
     </div>
   </section>
+<hr>
 
-
-  <!-- Testimonials -->
+  <!-- Maths -->
 
   <section id="Maths">
 
@@ -174,7 +175,7 @@
     </div>
   </section>
 
-
+<hr>
   <!-- Press -->
   <div class="slide2">
     <h2 class="slide2-heading">How to create a golden rectangle?</h2>
@@ -244,23 +245,24 @@
       </a>
     </div>
   </div>
-
+<hr>
 
   <section id="Applications">
 <p></p>
 
 
   </section>
-
-
-
-
+<hr>
   <footer id="footer">
 
-
-
   </footer>
+  <!-- BOOTSTRAP JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
 
+<!-- EXTERNAL JS -->
+  <script src="index.js" charset="utf-8"></script>
 
 </body>
 
