added application section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
   <section id="title">
           <!-- Nav Bar -->
-
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="">Golden Ratio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +40,7 @@
               <a class="nav-link" href="#Maths">Mathematics</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Applications">Applications</a>
+              <a class="nav-link" href="applications.html">Applications</a>
             </li>
           </ul>
         </div>
@@ -59,10 +58,9 @@
             In mathematics, two quantities are in the golden ratio if their ratio is the same as the ratio of their sum to the larger of the two quantities.
           </p>
         </div>
+
         <div class="col-lg-6 yout">
-
-
-          <iframe width="350" height="270" src="https://www.youtube.com/embed/keLN89CWZ-A?controls=1">
+        <iframe width="350" height="270" src="https://www.youtube.com/embed/keLN89CWZ-A?controls=1">
 
           </iframe>
 
@@ -129,25 +127,25 @@
         Two quantities a and b are said to be in the golden ratio φ if
       </p>
       <p>
-        <img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/cf7e51356f54a831db021e7e46922c778bbd91c0">
+        <img class="bg-dark" src="https://wikimedia.org/api/rest_v1/media/math/render/svg/cf7e51356f54a831db021e7e46922c778bbd91c0">
       </p>
       <p>
         Therefore,
       </p>
       <p>
-        <img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/5d253b8b63fe6f4a656787c015bec7e36645b04d">
+        <img class="bg-dark" src="https://wikimedia.org/api/rest_v1/media/math/render/svg/5d253b8b63fe6f4a656787c015bec7e36645b04d">
       </p>
       <p>
         which can be rearranged to :
       </p>
       <p>
-        <img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/909a0da5459476692cb089d9b951d4284387e927">
+        <img class="bg-dark" src="https://wikimedia.org/api/rest_v1/media/math/render/svg/909a0da5459476692cb089d9b951d4284387e927">
       </p>
       <p>
         Because φ is the ratio between positive quantities, φ is necessarily positive:
       </p>
       <p>
-        <img class="mimg" src="https://wikimedia.org/api/rest_v1/media/math/render/svg/1c9b7ed65783d1cdb2dfa7abd1361b1c1553bbe6" ; </p>
+        <img class="bg-dark" class="mimg" src="https://wikimedia.org/api/rest_v1/media/math/render/svg/1c9b7ed65783d1cdb2dfa7abd1361b1c1553bbe6" ; </p>
         <br>
       <p>
         The Golden Ratio can be illustrated using a Golden Rectangle. This is a rectangle where, if you cut off a square (side length equal to the shortest side of the rectangle), the rectangle that's left will have the same proportions as the
@@ -180,6 +178,13 @@
   <div class="slide2">
     <h2 class="slide2-heading">How to create a golden rectangle?</h2>
     <div id="ex-control" class="carousel slide" data-ride="false">
+      <ol class="carousel-indicators">
+          <li data-target="#ex-control" data-slide-to="0" class="active"></li>
+          <li data-target="#ex-control" data-slide-to="1"></li>
+          <li data-target="#ex-control" data-slide-to="2"></li>
+          <li data-target="#ex-control" data-slide-to="3"></li>
+          <li data-target="#ex-control" data-slide-to="4"></li>
+        </ol>
 
       <div class="carousel-inner">
 
@@ -235,11 +240,11 @@
         </div>
 
       </div>
-      <a class="carousel-control-prev" href="#ex-control" role="button" data-slide="prev">
+      <a class="carousel-control-prev bg-dark" href="#ex-control" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#ex-control" role="button" data-slide="next">
+      <a class="carousel-control-next bg-dark" href="#ex-control" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
@@ -248,10 +253,10 @@
 <hr>
 
   <section id="Applications">
-<p></p>
+
+</section>
 
 
-  </section>
 <hr>
   <footer id="footer">
 
