--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- CSS STYLESHEET -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/fla.png">
+  <link href="css/loader.css" rel="stylesheet">
   <!-- FONTS-AWESOME -->
   <script src="https://kit.fontawesome.com/5bbf9f11f7.js" crossorigin="anonymous"></script>
 
@@ -21,6 +22,13 @@
 </head>
 
 <body>
+  
+  <div id="loader-wrapper">
+		<div id="loader"></div>
+
+		<div class="loader-section section-left"></div>
+		<div class="loader-section section-right"></div>
+	</div>
   <section id="title">
           <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
