--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
 
 <!-- EXTERNAL JS -->
   <script src="index.js" charset="utf-8"></script>
+	<script src="loader.js" charset="utf-8"></script>
 
 </body>
 
