--- a/applications.html
+++ b/applications.html
@@ -13,7 +13,7 @@
 
   <div class="wrapper">
     <div class="row">
-      <div id="sidebar" class="col-lg-6">
+      <div id="sidebar" class="col-lg-3">
         <div class="sidebar-header">
           <h3>APPLICATIONS</h3>
         </div>
@@ -49,9 +49,15 @@
           <li>
             <a href="#">FINANCE</a>
           </li>
+          <li>
+            <a href="#" onclick="">Image Converter</a>
+          </li>
         </ul>
 </div>
-        <div class="col-lg-6 content-wrapper">
+        <div class="col-lg-9 content-wrapper">
+
+          <iframe src='imageConverter.html' style="border: 0;width: 100%;height: 100%;"></iframe>
+          <br />
 
             <h2>Collapsible Sidebar Using Bootstrap 4</h2>
 
