--- a/applications.html
+++ b/applications.html
@@ -50,13 +50,16 @@
             <a href="#">FINANCE</a>
           </li>
           <li>
-            <a href="#" onclick="">Image Converter</a>
+            <a href="#" onclick="loadUrl('imageConverter.html')">Image Converter</a>
+          </li>
+          <li>
+            <a href="#" onclick="loadUrl('textBeautify.html')">Text Beautify</a>
           </li>
         </ul>
 </div>
         <div class="col-lg-9 content-wrapper">
 
-          <iframe src='imageConverter.html' style="border: 0;width: 100%;height: 100%;"></iframe>
+          <iframe id='main_view' src='imageConverter.html' style="border: 0;width: 100%;height: 100%;"></iframe>
           <br />
 
             <h2>Collapsible Sidebar Using Bootstrap 4</h2>
@@ -120,11 +123,28 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
     <script>
+      var main_view = document.getElementById('main_view')
+      
+      function loadUrl(url){
+        main_view.src = url
+      }
+      
       $(document).ready(function() {
         $("#sidebarCollapse").on('click', function() {
           $("#sidebar").toggleClass('active');
         })
+
+
+
+
+
+
+
       })
+
+
+
+
     </script>
     <!-- EXTERNAL JS -->
     <script src="index.js" charset="utf-8"></script>
