--- a/applications.html
+++ b/applications.html
@@ -11,123 +11,211 @@
 
 <body>
 
-  <div class="wrapper">
-    <div class="row">
-      <div id="sidebar" class="col-lg-3">
-        <div class="sidebar-header">
-          <h3>APPLICATIONS</h3>
+
+  <div class="row">
+    <div id="sidebar" class="col-lg-4">
+      <div class="sidebar-header">
+        <h3>APPLICATIONS</h3>
+      </div>
+
+
+      <ul class="list-unstyled components">
+        <li>
+          <a href="#">Nature</a>
+        </li>
+
+        <li>
+          <a href="#artSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">ART</a>
+
+          <ul class="collapse list-unstyled" id="artSubmenu">
+            <li>
+              <a href="#">page1</a>
+            </li>
+            <li>
+              <a href="#">page2</a>
+            </li>
+            <li>
+              <a href="#">page3</a>
+            </li>
+          </ul>
+
+        </li>
+
+
+        <li>
+          <a href="#">ARCHITECTURE</a>
+        </li>
+
+        <li>
+          <a href="#">FINANCE</a>
+        </li>
+        <li>
+          <a href="#" onclick="">Image Converter</a>
+        </li>
+      </ul>
+    </div>
+    <div class="col-lg-8" id="content">
+      <div class="imageGallery">
+        <img class="i1" src="images/face.jpeg" alt="">
+        <img class="i2" src="images/hurricane.jpeg" alt="">
+        <img class="i3" src="images/pyramid.jpeg" alt="">
+        <img class="i4" src="images/petals.jpg" alt="">
+        <img class="i5" src="images/nissan.jpeg" alt="">
+      </div>
+      <!-- NATURE -->
+      <br>
+      <div id="nature">
+        <h2>NATURE</h2>
+        <div class="text-center row">
+
+          <div class="card col-lg-6">
+            <div class="card-header">
+              Flower petals
+            </div>
+            <img src="images/petals.jpg" class="ImageV card-img-top" alt="">
+            <div class="card-body">
+              Phi appears in petals on account of the ideal packing arrangement as selected by Darwinian processes; each petal is placed at 0.618034 per turn (out of a 360° circle)
+            </div>
+          </div>
+
+          <div class="card col-lg-6">
+            <div class="card-header">
+              Spiral Galaxies
+            </div>
+            <img src="images/galaxy.jpeg" class="ImageV card-img-top" alt="">
+            <div class="card-body">
+              The Milky Way has several spiral arms, each of them a logarithmic spiral of about 12 degrees. As an interesting aside, spiral galaxies appear to defy Newtonian physics.
+            </div>
+          </div>
+
+          <div class="card col-lg-6">
+            <div class="card-header">
+              Shells
+            </div>
+                  <img src="images/shell.jpeg" alt="" class="Image card-img-top">
+
+            <div class="card-body">
+              Snail shells and nautilus shells follow the logarithmic spiral, as does the cochlea of the inner ear.
+            </div>
+          </div>
+
+          <div class="card col-lg-6">
+            <div class="card-header">
+              Tree branches
+            </div>
+              <img src="images/tree.webp" alt="" class="Image card-img-top">
+            <div class="card-body">
+              The Fibonacci sequence can also be seen in the way tree branches form or split. A main trunk will grow until it produces a branch, which creates two growth points
+            </div>
+          </div>
+
+
         </div>
+      </div>
 
 
-        <ul class="list-unstyled components">
-          <li>
-            <a href="#">Nature</a>
-          </li>
+      <br>
+      <div id="art">
+        <h2>ART</h2>
+        <div class="text-center row">
+          <div class="card col">
 
-          <li>
-            <a href="#artSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">ART</a>
+            <div class="card-header">
+              Da Vinci's Artwork
+            </div>
 
-            <ul class="collapse list-unstyled" id="artSubmenu">
-              <li>
-                <a href="#">page1</a>
-              </li>
-              <li>
-                <a href="#">page2</a>
-              </li>
-              <li>
-                <a href="#">page3</a>
-              </li>
+            <div class="row">
+              <div class="col-md-4">
+                <img src="images/Monalisa.webp" class="monaLisa card-img-top" alt="...">
+              </div>
+              <div class="col-md-4">
+                <img src="images/daVinci.jpg" class="Image card-img-top" alt="...">
+              </div>
+              <div class="artImage col-md-4">
+                <img src="images/daVinci1.jpeg" class="Image card-img-top" alt="...">
+              </div>
+            </div>
+
+            <div class="card-body">
+              Leonardo da Vinci, like many other artists throughout the ages, made extensive use of the Golden Ratio to create pleasing compositions.
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">In The Last Supper, the figures are arranged in the lower two thirds (the larger of the two parts of the Golden Ratio), and the position of Jesus is perfectly plotted by arranging golden rectangles across the
+                canvas.</li>
             </ul>
-
-          </li>
-
-
-          <li>
-            <a href="#">ARCHITECTURE</a>
-          </li>
-
-          <li>
-            <a href="#">FINANCE</a>
-          </li>
-          <li>
-            <a href="#" onclick="">Image Converter</a>
-          </li>
-        </ul>
-</div>
-        <div class="col-lg-9 content-wrapper">
-
-          <iframe src='imageConverter.html' style="border: 0;width: 100%;height: 100%;"></iframe>
-          <br />
-
-            <h2>Collapsible Sidebar Using Bootstrap 4</h2>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-            <div class="line"></div>
-            <h2>Collapsible Sidebar Using Bootstrap 4</h2>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
 
 
         </div>
-      </div>
-    </div>
-    <!-- <div class="container-fluid">
-
-    <div class="row">
-
-      <div class=" col-md-6 sidebar fixed-top">
-        <a class="navbar-brand" href="">APPLICATIONS</a>
-
-        <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-         <ul class="list-unstyled">
-
-           <li class="nav-item">
-             <a class="nav-link" href="">NATURE</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="">ARTS</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="">ARCHITECTURE</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="">FINANCE</a>
-           </li>
-         </ul>
-      </div>
-    </div>
-      <div class="col-md-6">
 
       </div>
 
+<!-- ARCHITECTURE -->
+      <div id="archit">
+        <h2>ARCHITECTURE</h2>
+        <div class="row text-center">
+          <div class="card col-lg-6">
+            <div class="card-header">
+              Great Pyramid of Giza
+            </div>
+            <img src="images/pyramid.jpeg" class="Image card-img-top" alt="">
+            <div class="card-body">
+              the Great Pyramid has a base of 230.4 meters (755.9 feet) and an estimated original height of 146.5 meters (480.6 feet). This also creates a height to base ratio of 0.636, which indicates it is indeed a Golden Triangles, at least to
+              within three significant decimal places of accuracy
+            </div>
+          </div>
+          <div class="card col-lg-6">
+            <div class="card-header">
+              Parthenon
+            </div>
+            <img src="images/p1.gif" class="Image card-img-top" alt="">
+            <div class="card-body">
+              Golden ratio rectangle that appear in the design work above the columns is a compelling evidence that the Greeks knew of, and applied, the golden ratio in the construction of the Parthenon.
+            </div>
+          </div>
+
+          <div class="card col-lg-6">
+            <div class="card-header">
+              Taj Mahal
+            </div>
+            <img src="images/tajMahal.gif" class="Image card-img-top" alt="">
+            <div class="card-body">
+              The main building of the Taj Mahal was designed using the Golden Ratio. This is why it looks so perfect. The rectangles that served as the basic outline for the exterior of the building were all in the Golden Proportion
+            </div>
+          </div>
+
+          <div class="card col-lg-6">
+            <div class="card-header">
+              Eiffel Tower
+            </div>
+            <img src="images/etower.png" class="ImageV card-img-top" alt="">
+            <div class="card-body">
+              Despite its enormous height, Eiffel Tower doesn’t look out of proportion, all thanks to the golden ratio.
+
+              The base is broader while it narrows down to the top, perfectly following the golden section & as needed for stability.
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <iframe src='imageConverter.html' style="border: 0;width: 100%;height: 100%;"></iframe>
     </div>
+  </div>
 
 
-    </div>
-    <!-- BOOTSTRAP JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
-    <script>
-      $(document).ready(function() {
-        $("#sidebarCollapse").on('click', function() {
-          $("#sidebar").toggleClass('active');
-        })
+  <!-- BOOTSTRAP JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function() {
+      $("#sidebarCollapse").on('click', function() {
+        $("#sidebar").toggleClass('active');
       })
-    </script>
-    <!-- EXTERNAL JS -->
-    <script src="index.js" charset="utf-8"></script>
+    })
+  </script>
+  <!-- EXTERNAL JS -->
+  <script src="index.js" charset="utf-8"></script>
 
 </body>
 
