--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <section id="Maths">
 
     <div>
-      <h2 id="mgbr">Mathematics behind Golden ratio</h2>
+      <h2 id="mbgr">Mathematics behind Golden ratio</h2>
       <p>
         Closely related to the Fibonacci Sequence, the Golden Ratio describes the perfectly symmetrical relationship between two proportions.
         Two quantities a and b are said to be in the golden ratio φ if
