--- a/applications.html
+++ b/applications.html
@@ -21,49 +21,42 @@
 
       <ul class="list-unstyled components">
         <li>
-          <a href="#">Nature</a>
+          <a href="#nature">Nature</a>
         </li>
 
         <li>
-          <a href="#artSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">ART</a>
 
-          <ul class="collapse list-unstyled" id="artSubmenu">
-            <li>
-              <a href="#">page1</a>
-            </li>
-            <li>
-              <a href="#">page2</a>
-            </li>
-            <li>
-              <a href="#">page3</a>
-            </li>
-          </ul>
-
+         <a href="#art">Art</a>
         </li>
 
 
         <li>
-          <a href="#">ARCHITECTURE</a>
+          <a href="#architec">ARCHITECTURE</a>
         </li>
 
         <li>
-          <a href="#">FINANCE</a>
-        </li>
-        <li>
-          <a href="#" onclick="">Image Converter</a>
+          <a href="#imageCropper" onclick="">Image Cropper</a>
         </li>
       </ul>
     </div>
     <div class="col-lg-8" id="content">
+     <img src="images/heading.gif" alt="">
+
+     <div class="jumbotron">
+  <img src="images/writer.jpg" alt="">
+  <p class="lead">“The Fibonacci Sequence turns out to be the key to understanding how nature designs... and is... a part of the same ubiquitous music of the spheres that builds harmony into atoms, molecules, crystals, shells, suns and galaxies and makes the Universe sing.”</p>
+<h5>― Guy Murchie, The Seven Mysteries of Life: An Exploration of Science and Philosophy</h6>
+</div>
       <div class="imageGallery">
         <img class="i1" src="images/face.jpeg" alt="">
-        <img class="i2" src="images/hurricane.jpeg" alt="">
-        <img class="i3" src="images/pyramid.jpeg" alt="">
+        <img class="i2" src="images/hurricane.jpg" alt="">
+        <img class="i3" src="images/pyramid1.jpeg" alt="">
         <img class="i4" src="images/petals.jpg" alt="">
-        <img class="i5" src="images/nissan.jpeg" alt="">
+        <img class="i5" src="images/nissan.jpg" alt="">
       </div>
       <!-- NATURE -->
       <br>
+
       <div id="nature">
         <h2>NATURE</h2>
         <div class="text-center row">
@@ -72,7 +65,9 @@
             <div class="card-header">
               Flower petals
             </div>
-            <img src="images/petals.jpg" class="ImageV card-img-top" alt="">
+          <video class="Image" autoplay muted>
+           <source src="images/petals.mp4" type="video/mp4">
+          </video>
             <div class="card-body">
               Phi appears in petals on account of the ideal packing arrangement as selected by Darwinian processes; each petal is placed at 0.618034 per turn (out of a 360° circle)
             </div>
@@ -82,7 +77,7 @@
             <div class="card-header">
               Spiral Galaxies
             </div>
-            <img src="images/galaxy.jpeg" class="ImageV card-img-top" alt="">
+            <img src="images/galaxy.jpg" class="ImageV card-img-top" alt="">
             <div class="card-body">
               The Milky Way has several spiral arms, each of them a logarithmic spiral of about 12 degrees. As an interesting aside, spiral galaxies appear to defy Newtonian physics.
             </div>
@@ -92,7 +87,7 @@
             <div class="card-header">
               Shells
             </div>
-                  <img src="images/shell.jpeg" alt="" class="Image card-img-top">
+                  <img src="images/shell.jpg" alt="" class="Image card-img-top">
 
             <div class="card-body">
               Snail shells and nautilus shells follow the logarithmic spiral, as does the cochlea of the inner ear.
@@ -103,7 +98,7 @@
             <div class="card-header">
               Tree branches
             </div>
-              <img src="images/tree.webp" alt="" class="Image card-img-top">
+              <img src="images/tree.jpg" alt="" class="Image card-img-top">
             <div class="card-body">
               The Fibonacci sequence can also be seen in the way tree branches form or split. A main trunk will grow until it produces a branch, which creates two growth points
             </div>
@@ -126,13 +121,13 @@
 
             <div class="row">
               <div class="col-md-4">
-                <img src="images/Monalisa.webp" class="monaLisa card-img-top" alt="...">
+                <img src="images/Monalisa.webp" class="card-img-top ImageV" alt="...">
               </div>
               <div class="col-md-4">
                 <img src="images/daVinci.jpg" class="Image card-img-top" alt="...">
               </div>
               <div class="artImage col-md-4">
-                <img src="images/daVinci1.jpeg" class="Image card-img-top" alt="...">
+                <img src="images/daVinci1.jpg" class="Image card-img-top" alt="...">
               </div>
             </div>
 
@@ -151,14 +146,14 @@
       </div>
 
 <!-- ARCHITECTURE -->
-      <div id="archit">
+      <div id="architec">
         <h2>ARCHITECTURE</h2>
         <div class="row text-center">
           <div class="card col-lg-6">
             <div class="card-header">
               Great Pyramid of Giza
             </div>
-            <img src="images/pyramid.jpeg" class="Image card-img-top" alt="">
+            <img src="images/pyramid1.jpeg" class="Image card-img-top" alt="">
             <div class="card-body">
               the Great Pyramid has a base of 230.4 meters (755.9 feet) and an estimated original height of 146.5 meters (480.6 feet). This also creates a height to base ratio of 0.636, which indicates it is indeed a Golden Triangles, at least to
               within three significant decimal places of accuracy
@@ -168,7 +163,7 @@
             <div class="card-header">
               Parthenon
             </div>
-            <img src="images/p1.gif" class="Image card-img-top" alt="">
+            <img src="images/p1.jpg" class="Image card-img-top" alt="">
             <div class="card-body">
               Golden ratio rectangle that appear in the design work above the columns is a compelling evidence that the Greeks knew of, and applied, the golden ratio in the construction of the Parthenon.
             </div>
@@ -178,7 +173,7 @@
             <div class="card-header">
               Taj Mahal
             </div>
-            <img src="images/tajMahal.gif" class="Image card-img-top" alt="">
+            <img src="images/tajMahal.jpg" class="Image card-img-top" alt="">
             <div class="card-body">
               The main building of the Taj Mahal was designed using the Golden Ratio. This is why it looks so perfect. The rectangles that served as the basic outline for the exterior of the building were all in the Golden Proportion
             </div>
@@ -198,7 +193,7 @@
         </div>
       </div>
       <br>
-      <iframe src='imageConverter.html' style="border: 0;width: 100%;height: 100%;"></iframe>
+      <iframe id="imageCropper"src='imageConverter.html' style="border: 0;width: 100%;height: 100%;"></iframe>
     </div>
   </div>
 
@@ -207,6 +202,8 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
+<script src="index.js" charset="utf-8"></script>
+
   <script>
     $(document).ready(function() {
       $("#sidebarCollapse").on('click', function() {
