--- a/applications.html
+++ b/applications.html
@@ -36,7 +36,7 @@
           </li>
         </ul>
 </div>
-        <div class="col-lg-10 content-wrapper">
+        <!-- <div class="col-lg-10 content-wrapper">
           <iframe id='main_view' src='imageConverter.html' style="border: 0;width: 100%;height: 100%;"></iframe>
           <br />
 
@@ -49,7 +49,7 @@
           <a href="#imageCropper" onclick="">Image Cropper</a>
         </li>
       </ul>
-    </div>
+    </div> -->
     <div class="col-lg-8" id="content">
      <img src="images/heading.gif" alt="">
 
@@ -204,7 +204,7 @@
         </div>
       </div>
       <br>
-      <iframe id="imageCropper"src='imageConverter.html' style="border: 0;width: 100%;height: 100%;"></iframe>
+      <iframe id="imageCropper"src='imageConverter.html' style="border: 0;width: 100%;height: 120vh;"></iframe>
     </div>
   </div>
 
