--- a/applications.html
+++ b/applications.html
@@ -26,7 +26,7 @@
 
           <li>
 
-            <a href="#art">Art</a>
+            <a href="#architecture">Architecture</a>
           </li>
           <li>
             <a href="#" onclick="loadUrl('imageConverter.html')">Image Converter</a>
