--- a/applications.html
+++ b/applications.html
@@ -12,7 +12,7 @@
 <body>
 
 
-  <div class="row">
+  <div class="row" style="margin:0">
     <div id="sidebar" class="col-lg-4">
       <div class="sidebar-header">
         <h3>APPLICATIONS</h3>
@@ -24,15 +24,19 @@
           <a href="#nature">Nature</a>
         </li>
 
-          <li>
+        <li>
 
-            <a href="#architecture">Architecture</a>
+          <a href="#art">Arts</a>
+        </li>
+        <li>
+
+          <a href="#architec">Architecture</a>
+        </li>
+          <li>
+            <a href="#imageConverter">Image Converter</a>
           </li>
           <li>
-            <a href="#" onclick="loadUrl('imageConverter.html')">Image Converter</a>
-          </li>
-          <li>
-            <a href="#" onclick="loadUrl('textBeautify.html')">Text Beautify</a>
+            <a href="#typography" onclick="loadUrl('textBeautify.html')">Text Beautify</a>
           </li>
         </ul>
 </div>
@@ -204,7 +208,11 @@
         </div>
       </div>
       <br>
-      <iframe id="imageCropper"src='imageConverter.html' style="border: 0;width: 100%;height: 120vh;"></iframe>
+
+      <iframe id="imageConverter" src='imageConverter.html' style="border: 0;width: 100%;height: 120vh;"></iframe>
+      <hr />
+      <iframe id="typography" src='typography.html' style="border: 0;width: 100%;height: 120vh;"></iframe>
+      
     </div>
   </div>
 
