some minor change

--- a/applications.html
+++ b/applications.html
@@ -23,10 +23,15 @@
         <li>
           <a href="#nature">Nature</a>
         </li>
-
+          
           <li>
 
-            <a href="#architecture">Architecture</a>
+         <a href="#art">Art</a>
+        </li>
+        
+          <li>
+
+            <a href="#architec">Architecture</a>
           </li>
           <li>
             <a href="#" onclick="loadUrl('imageConverter.html')">Image Converter</a>
