some minor changes

--- a/applications.html
+++ b/applications.html
@@ -34,7 +34,7 @@
             <a href="#architec">Architecture</a>
           </li>
           <li>
-            <a href="#" onclick="loadUrl('imageConverter.html')">Image Converter</a>
+            <a href="#imageCropper" onclick="loadUrl('imageConverter.html')">Image Converter</a>
           </li>
           <li>
             <a href="#" onclick="loadUrl('textBeautify.html')">Text Beautify</a>
