--- a/typography.html
+++ b/typography.html
@@ -6,11 +6,14 @@
     </head>
     <body>
         <div style="width: 100vw;text-align: center;font-size: 64px;font-weight: 400;margin:20px;">Typography | Golden Ratio</div>
-        <div id='controls' style="border:1px solid #dedede">
-            <div style="padding:10px">
-                <label>Title</label>
+        <div style="text-align: center;font-size: 26px;display: flex;padding:5px;">
+            <p style="width: 80%;margin: 0 auto;">Here, in this document we set the Font Size of main Heading and based on that we specify the font Size of other Elements</p>
+        </div>
+        <div id='controls' style="border:1px solid #dedede;display: flex;">
+            <div style="padding:5px;">
+                <label class="title_controller_self">Title</label>
                 <div>
-                    <lable>Font Size</lable>
+                    <lable class="special_label">Font Size</lable>
                     <select id='title_controller' type="text" placeholder="Enter Title of the Page" onchange="changeTitle(event)">
                         
                     </select>
@@ -67,8 +70,8 @@
                 // console.log(para_title)
 
                 para_title.forEach(element=>{
-                    element.style.borderTop = '1px solid #dedede'
-                    element.style.borderBottom= '1px solid #dedede'
+                    // element.style.borderTop = '1px solid #dedede'
+                    // element.style.borderBottom= '1px solid #dedede'
                     element.style.fontSize = temp/1.618;
                 })
                 para_content.forEach(elemet=>{
@@ -86,6 +89,36 @@
     <style>
         .content-1{
             padding:5px;
+        }
+        #controls > div,select{
+            padding:5px;
+            border:0;
+            font-size: 32px;
+        }
+        select{
+            transition-duration: 0.2s;
+        }
+        select:hover{
+            cursor: pointer;
+            background-color: #005086;
+                        color:white;
+                        border-radius:0px;
+                        box-shadow: 0 0 0 4px white,0 0 0 6px teal;
+        }
+        ::selection{
+            background-color: #005086;
+            color: white;
+        }
+        option{
+            background-color: white;
+            color:black;
+        }
+        .title_controller_self{
+            font-size: 42px;text-align: center;
+
+        }
+        .special_label::after{
+            content: ':';
         }
     </style>
 </html>
