--- a/typography.html
+++ b/typography.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <link href='https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css' rel="stylesheet" />
+        <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
         <title>
             Typography | Golden Ratio
         </title>
