--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<link rel="stylesheet" href="C:\Users\JAYANT\Desktop\QUIZ\dist\css\style.css">
+		<link rel="stylesheet" href="css\style_for_quiz.css">
 	</head>
 
 	<body>
@@ -34,11 +34,11 @@
 			</div>
 		</div>
 
-		<script src="C:\Users\JAYANT\Desktop\QUIZ\dist\js\quiz.js"></script>
+		<script src="quiz.js"></script>
 
-		<script src="C:\Users\JAYANT\Desktop\QUIZ\dist\js\userinfo.js"></script>
+		<script src="userinfo_for_quiz.js"></script>
 
-		<script src="C:\Users\JAYANT\Desktop\QUIZ\dist\js\timer.js"></script>
+		<script src="timer_for_quiz.js"></script>
 
 	</body>
 </head>
