--- a/end_quiz.html
+++ b/end_quiz.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<link rel="stylesheet" href="C:\Users\JAYANT\Desktop\QUIZ\dist\css\style.css">
+		<link rel="stylesheet" href="css\style_for_quiz.css">
 	</head>
 
 	<body>
@@ -20,6 +20,6 @@
 
 		<script src="https://kit.fontawesome.com/a55b719149.js" crossorigin="anonymous"></script>
 
-		<script src="C:\Users\JAYANT\Desktop\QUIZ\dist\js\userinfo.js"></script>
+		<script src="userinfo_for_quiz.js"></script>
 	</body>
 </html>
