--- a/applications.html
+++ b/applications.html
@@ -12,7 +12,7 @@
 <body>
 
 
-  <div class="row" style="margin:0">
+  <div class="row">
     <div id="sidebar" class="col-lg-4">
       <div class="sidebar-header">
         <h3>APPLICATIONS</h3>
@@ -44,21 +44,11 @@
           </li>
         </ul>
 </div>
-        <!-- <div class="col-lg-10 content-wrapper">
-          <iframe id='main_view' src='imageConverter.html' style="border: 0;width: 100%;height: 100%;"></iframe>
-          <br />
 
 
-        <li>
-          <a href="#architec">ARCHITECTURE</a>
-        </li>
 
-        <li>
-          <a href="#imageCropper" onclick="">Image Cropper</a>
-        </li>
-      </ul>
-    </div> -->
     <div class="col-lg-8" id="content">
+      
      <img src="images/heading.gif" alt="">
 
      <div class="jumbotron">
