--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
     </div>
   </div>
 <hr>
+	
+<div id="button"><a href="start_quiz.html">Quiz Time</a></div>
 
   <section id="Applications">
 
