--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   </div>
 <hr>
 	
-<div id="button"><a href="start_quiz.html">Quiz Time</a></div>
+<div id="but_ton"><a href="start_quiz.html">Quiz Time</a></div>
 
   <section id="Applications">
 
