--- a/index.html
+++ b/index.html
@@ -256,8 +256,9 @@
     </div>
   </div>
 <hr>
-	
 
+	<h2 id="mbgr">Time foe a quiz. Click on the button below to navigate to the quix page</h2>
+	<a href="quiz.html"><button>QUIZ_TIME!!</button></a>
 
   <section id="Applications">
 
