--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 <hr>
 
 	<h2 id="mbgr">Time foe a quiz. Click on the button below to navigate to the quix page</h2>
-	<a href="quiz.html"><button>QUIZ_TIME!!</button></a>
+	<a href="start_quiz.html"><button>QUIZ_TIME!!</button></a>
 
   <section id="Applications">
 
