--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
   </div>
 <hr>
 
-	<h2 id="mbgr">Time foe a quiz. Click on the button below to navigate to the quix page</h2>
+	<h2 id="mbgr">Time for a quiz </h2>
+	<h3 id="mbgr">Click on the button below to navigate to the quiz page</h3>
 	<a href="start_quiz.html"><button>QUIZ_TIME!!</button></a>
 
   <section id="Applications">
