--- a/imageConverter.html
+++ b/imageConverter.html
@@ -14,6 +14,14 @@
 
                <div style="width: 600px;height:600px">
                 <h1 class="title is-2" style="text-align: center;"> Golden Ratio Cropper</h1> 
+
+                <br />
+                <h4 class="title is-4">How Golden Ratio for Images ?</h4>
+                <p>
+                    Human brain has a tendency to look away from the centre in any frame. If we <b>place an object on the golden point</b> i.e. on one third of the frame, <b>the viewer is more attracted towards that photograph</b>. Golden ratio is similar to the rule of thirds or golden point. The Golden Ratio allows for a composition that is perfectly balanced from a viewer’s perspective, creating a photograph that is <b>most pleasing to the human eye</b>.
+
+
+                </p>
                 <br /><br />
     
                     <div id="demo" style="left:120px;height: 60%;width: 100%;margin:10px;box-shadow: 0 0 10px #dedede;"></div>
