--- a/applications.html
+++ b/applications.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>APPLICATIONS</title>
   <!-- BOOTSTRAP CDN -->
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
   <link rel="stylesheet" href="css/appl.css">
@@ -233,7 +234,7 @@
       </div>
       <br>
 
-      <iframe id="imageConverter" src='imageConverter.html' style="border: 0;width: 100%;height: 120vh;"></iframe>
+      <iframe id="imageConverter" src='imageConverter.html' style="border: 0;width: 100%;height: 150vh;"></iframe>
       <hr />
       <iframe id="typography" src='typography.html' style="border: 0;width: 100%;height: 120vh;"></iframe>
 
