--- a/applications.html
+++ b/applications.html
@@ -58,7 +58,7 @@
           <a href="#architec">Architecture</a>
         </li>
           <li>
-          <a href="#imageConverter">Image Converter</a>
+          <a href="imageConverter.html">Image Converter</a>
 
         </li>
 
@@ -72,7 +72,7 @@
 
     <div class="col-sm-8" id="content">
 
-     <img src="images/heading.gif" alt="">
+     <img src="images/heading.gif" alt="" style="width: 100%;">
 
      <div class="jumbotron">
   <img src="images/writer.jpg" alt="">
@@ -226,7 +226,7 @@
       </div>
       <br>
 
-      <iframe id="imageConverter" src='imageConverter.html' style="border: 0;width: 100%;height: 150vh;"></iframe>
+      <!-- <iframe id="imageConverter" src='imageConverter.html' style="border: 0;width: 100%;"></iframe> -->
       <hr />
       <iframe id="typography" src='typography.html' style="border: 0;width: 100%;height: 120vh;"></iframe>
 
