--- a/start_quiz.html
+++ b/start_quiz.html
@@ -17,6 +17,6 @@
 				</form>
 			</div>
 		</div>
-		<script src="C:\Users\JAYANT\Desktop\QUIZ\dist\js\quiz.js"></script>
+		<script src="quiz.js"></script>
 	</body>
 </html>
