--- a/start_quiz.html
+++ b/start_quiz.html
@@ -12,7 +12,7 @@
 		<div class="wrapper">
 			<div class="welcome_text">
 				<form class="welcome_form" name="welcome_form" onsubmit="submitForm(event)">
-					<input type="text" name="name">
+					<input type="text" name="name" placeholder="Enter your name">
 					<button type="submit">Start Quiz</button>
 				</form>
 			</div>
