--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
 <!-- HISTORY -->
-  <section id="history">
+<!--   <section id="history">
 
 
     <h2 id="his">HISTORY</h2>
@@ -120,7 +120,7 @@
     </div>
   </section>
 <hr>
-
+ -->
   <!-- Maths -->
 
   <section id="Maths">
