--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
 
 </head>
-  
+
   <div id="loader-wrapper">
 		<div id="loader"></div>
 
@@ -262,12 +262,16 @@
 	<h3 id="mbgr">Click on the button below to navigate to the quiz page</h3>
 	<a href="start_quiz.html"><button>QUIZ_TIME!!</button></a>
 	</section>
-  <section id="Applications">
-
-</section>
 
 
 <hr>
+<div class="jumbotron">
+<h1 class="display-4">Want to know more about Golden Ratio</h1>
+<p class="lead">Click the button below</p>
+<form action="/signup" method="post">
+<a href="signup.html"><button class="btn btn-large"type="button" name="button">Subscribe</button></a>
+</form>
+</div>
   <footer id="footer">
 
   </footer>
