some minor changes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <!-- BOOTSTRAP CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
   <!-- CSS STYLESHEET -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="public/css/styles.css">
   <link rel="icon" href="images/fla.png">
-  <link href="css/loader.css" rel="stylesheet">
+  <link href="public/css/loader.css" rel="stylesheet">
   <!-- FONTS-AWESOME -->
   <script src="https://kit.fontawesome.com/5bbf9f11f7.js" crossorigin="anonymous"></script>
 
@@ -283,6 +283,7 @@
 <!-- EXTERNAL JS -->
   <script src="index.js" charset="utf-8"></script>
 	<script src="loader.js" charset="utf-8"></script>
+  <script src="app.js" charset="utf-8"></script>
 
 </body>
 
