--- a/public/quiz.html
+++ b/public/quiz.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<link rel="stylesheet" href="css\style_for_quiz.css">
+		<link rel="stylesheet" href="css/style_for_quiz.css">
 	</head>
 
 	<body>
@@ -28,7 +28,7 @@
 						<li class="option">option 3</li>
 						<li class="option">option 4</li>
 					</ul>-->
-					</div> 
+					</div>
 					<button class="btn_next" onclick="next()">Next</button>
 				</div>
 			</div>
