--- a/public/imageConverter.html
+++ b/public/imageConverter.html
@@ -4,6 +4,8 @@
 </head>
     <link href='https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css' rel="stylesheet" />
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  
     
     <div id='imageConverterBody' style="border:0px solid black;width:100%;padding-top:20px;padding-left: 10px;">
         <script src="js/jq.js" ></script>
