--- a/public/index.html
+++ b/public/index.html
@@ -269,10 +269,20 @@
 <h1 class="display-4">Want to know more about Golden Ratio</h1>
 <p class="lead">Click the button below</p>
 <form action="/signup" method="post">
-<a href="signup.html"><button class="btn btn-large"type="button" name="button">Subscribe</button></a>
+<a href="signup.html"><button class="btn bg-warning"type="button" name="button">Subscribe</button></a>
 </form>
 </div>
   <footer id="footer">
+   <div class="bottom-container">
+     <p>Made with <i class="fas fa-heart"></i> by Software_Chasers</p>
+    <a class="footer-link" href="https://www.linkedin.com/in/harshit-chauhan-35a342197/">LinkedIn   </a>
+
+     <a class="footer-link" href="https://github.com/Harshit424">Github   </a>
+
+     <a class="footer-link" href="https://www.hackerearth.com/@harshitchauhan12102001">HackerEarth   </a>
+       <p class="p8">© 2020 <strong>HARSHIT CHAUHAN</strong>.All rights reserved</p>
+
+   </div>
 
   </footer>
   <!-- BOOTSTRAP JS -->
@@ -283,7 +293,7 @@
 <!-- EXTERNAL JS -->
 	<script>
     $(document).ready(function(){
-	
+
 	setTimeout(function(){
 		$('body').addClass('loaded');
 	},3000);
