added login logo

--- a/public/index.html
+++ b/public/index.html
@@ -280,7 +280,7 @@
      <a class="footer-link" href="https://github.com/Harshit424">Github   </a>
 
      <a class="footer-link" href="https://www.hackerearth.com/@harshitchauhan12102001">HackerEarth   </a>
-       <p class="p8">© 2020 <strong>HARSHIT CHAUHAN</strong>.All rights reserved</p>
+       <p class="p8">© 2020 <strong>Software_Chasers</strong>.All rights reserved</p>
 
    </div>
 
