--- a/public/signup.html
+++ b/public/signup.html
@@ -46,7 +46,7 @@
   </head>
   <body class="text-center">
     <form action="/signup" class="form-signin" method="post">
-  <img class="mb-4" src="" alt="" width="72" height="72">
+  <img class="mb-4" src="https://png.pngtree.com/png-vector/20191003/ourmid/pngtree-user-login-or-authenticate-icon-on-gray-background-flat-icon-ve-png-image_1786166.jpg" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Want to know more about Golden Ratio!</h1>
 
   <input class="top" name="email" type="text" class="form-control" placeholder="Email address" required autofocus>
