--- a/public/applications.html
+++ b/public/applications.html
@@ -8,23 +8,17 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
-  <link rel="stylesheet" href="public/css/appl.css">
+  <link rel="stylesheet" href="css/appl.css">
 </head>
 
 <body>
 
 
-<<<<<<< HEAD:applications.html
-  <div class="row" style="margin:0">
-    <div id="sidebar" class="col-lg-4">
-      <div class="sidebar-header" style="display: flex;">
-=======
 
   <div class="row" style="margin:0">
     <div id="sidebar" class="col-lg-4">
       <div class="sidebar-header" style="display: flex;">
 
->>>>>>> cd75929ad88c1a78afab471f446d6670807e0ef1:public/applications.html
         <h3>APPLICATIONS</h3>
             <button
               class="button" id='toggleButton'
@@ -76,7 +70,7 @@
 
 
 
-    <div class="col-lg-8" id="content">
+    <div class="col-sm-8" id="content">
 
      <img src="images/heading.gif" alt="" style="width: 100%;">
 
@@ -99,7 +93,7 @@
         <h2>NATURE</h2>
         <div class="text-center row">
 
-          <div class="card col-lg-6">
+          <div class="card col-sm-6">
             <div class="card-header">
               Flower petals
             </div>
@@ -111,7 +105,7 @@
             </div>
           </div>
 
-          <div class="card col-lg-6">
+          <div class="card col-sm-6">
             <div class="card-header">
               Spiral Galaxies
             </div>
@@ -121,7 +115,7 @@
             </div>
           </div>
 
-          <div class="card col-lg-6">
+          <div class="card col-sm-6">
             <div class="card-header">
               Shells
             </div>
@@ -132,7 +126,7 @@
             </div>
           </div>
 
-          <div class="card col-lg-6">
+          <div class="card col-sm-6">
             <div class="card-header">
               Tree branches
             </div>
@@ -157,25 +151,7 @@
               Da Vinci's Artwork
             </div>
 
-<<<<<<< HEAD:applications.html
 
-=======
-<<<<<<< HEAD:applications.html
-            <div class="row">
-               <div class="col-lg-4">
-                <img src="images/Monalisa.webp" id='monalisa_function' class="card-img-top ImageV" alt="...">
-              </div>
-              <div class="col-lg-4">
-                <img src="images/daVinci.jpg" class="Image card-img-top" alt="...">
-              </div>
-              <div class="artImage col-lg-4">
-                <img src="images/daVinci1.jpg" class="Image card-img-top" alt="...">
-              </div>
-            </div>
-=======
-
->>>>>>> cd75929ad88c1a78afab471f446d6670807e0ef1:public/applications.html
->>>>>>> Pushpendrahpx-master:public/applications.html
 
             <div class="card-body">
               <div class="row">
@@ -206,7 +182,7 @@
       <div id="architec">
         <h2>ARCHITECTURE</h2>
         <div class="row text-center">
-          <div class="card col-lg-6">
+          <div class="card col-sm-6">
             <div class="card-header">
               Great Pyramid of Giza
             </div>
@@ -216,7 +192,7 @@
               within three significant decimal places of accuracy
             </div>
           </div>
-          <div class="card col-lg-6">
+          <div class="card col-sm-6">
             <div class="card-header">
               Parthenon
             </div>
@@ -226,7 +202,7 @@
             </div>
           </div>
 
-          <div class="card col-lg-6">
+          <div class="card col-sm-6">
             <div class="card-header">
               Taj Mahal
             </div>
@@ -236,7 +212,7 @@
             </div>
           </div>
 
-          <div class="card col-lg-6">
+          <div class="card col-sm-6">
             <div class="card-header">
               Eiffel Tower
             </div>
