--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,9 @@
   <!-- BOOTSTRAP CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
   <!-- CSS STYLESHEET -->
-<<<<<<< HEAD:index.html
-  <link rel="stylesheet" href="public/css/styles.css">
-=======
   <link rel="stylesheet" href="css/styles.css" type="text/css">
->>>>>>> Pushpendrahpx-master:public/index.html
   <link rel="icon" href="images/fla.png">
-  <link href="public/css/loader.css" rel="stylesheet">
+  <link href="css/loader.css" rel="stylesheet">
   <!-- FONTS-AWESOME -->
   <script src="https://kit.fontawesome.com/5bbf9f11f7.js" crossorigin="anonymous"></script>
 
@@ -295,12 +291,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
 
 <!-- EXTERNAL JS -->
-<<<<<<< HEAD:index.html
-  <script src="index.js" charset="utf-8"></script>
-	<script src="loader.js" charset="utf-8"></script>
-  <script src="app.js" charset="utf-8"></script>
-
-=======
 	<script>
     $(document).ready(function(){
 
@@ -309,7 +299,6 @@
 	},3000);
 });
   </script>
->>>>>>> Pushpendrahpx-master:public/index.html
 </body>
 
 </html>
